[tool.poetry]
name = "network-onesimulation"
version = "0.1.0"
description = ""
authors = ["yanbaru1331 <s24012@g.metro-cit.ac.jp>"]
readme = "README.md"
packages = [{ include = "network_onesimulation" }]

[tool.poetry.dependencies]
python = "^3.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
